Fix overlapping of headers

--- a/css/main.sass
+++ b/css/main.sass
@@ -59,6 +59,9 @@ header
             margin-bottom: -4px
             cursor: pointer
 
+        div div
+            margin-bottom: 1em
+
 h2
     position: relative
     top: 0
